<resources>
    <string name="app_name">Meet Me Halfway</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_landing_page">Meet Me Halfway</string>
    <string name="addr_one">Enter Address 1</string>
    <string name="addr_two">Enter Address 2</string>
    <string name="button_enter">Continue</string>
    <string name="title">Meet Me Halfway</string>
    <string-array name ="empty_array">
    </string-array>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_map_options">Map Options</string>
    <string name="title_button_back">Go Back to Home Page</string>

    <!-- Map Options strings -->
    <string name="pref_header_map_options">Map Options</string>
    <string name="pref_title_map_radius">Change radius for location results</string>
    <string name="pref_key_map_radius">map_radius</string>
    <string-array name="pref_map_radius_titles">
        <item>1 mile</item>
        <item>5 miles</item>
        <item>10 miles</item>
        <item>25 miles</item>
        <item>50 miles</item>
    </string-array>
    <string-array name="pref_map_radius_values">
        <item>1</item>
        <item>5</item>
        <item>10</item>
        <item>25</item>
        <item>50</item>
    </string-array>
    <string name="pref_title_loc_type">Choose Safe Locations Only</string>
    <string name="pref_description_loc_type">Results will display only police stations.</string>
    <string name="pref_key_safe_places">safe_places_only</string>


    <string-array name="pref_location_values">
        <item>any</item>
        <item>airport</item>
        <item>amusement_park</item>
        <item>aquarium</item>
        <item>atm</item>
        <item>bank</item>
        <item>bar</item>
        <item>bowling_alley</item>
        <item>casino</item>
        <item>city_hall</item>
        <item>fire_station</item>
        <item>gas_station</item>
        <item>gym</item>
        <item>library</item>
        <item>lodging</item>
        <item>movie_theater</item>
        <item>museum</item>
        <item>night_club</item>
        <item>park</item>
        <item>police</item>
        <item>post_office</item>
        <item>restaurant</item>
        <item>rv_park</item>
        <item>shopping_mall</item>
        <item>spa</item>
        <item>store</item>
        <item>supermarket</item>
        <item>zoo</item>
     </string-array>

    <string-array name="pref_location_titles">
        <item>Any</item>
        <item>Airport</item>
        <item>Amusement Park</item>
        <item>Aquarium</item>
        <item>ATM</item>
        <item>Bank</item>
        <item>Bar</item>
        <item>Bowling Alley</item>
        <item>Casino</item>
        <item>City Hall</item>
        <item>Fire Station</item>
        <item>Gas Station</item>
        <item>Gym</item>
        <item>Library</item>
        <item>Lodging</item>
        <item>Movie Theater</item>
        <item>Museum</item>
        <item>Night Club</item>
        <item>Park</item>
        <item>Police Station</item>
        <item>Post Office</item>
        <item>Restaurant</item>
        <item>RV Park</item>
        <item>Shopping Mall</item>
        <item>Spa</item>
        <item>Store</item>
        <item>Supermarket</item>
        <item>Zoo</item>
    </string-array>

    <!-- User Settings strings -->
    <string name="pref_header_user_settings">Settings</string>

    <!-- About strings -->
    <string name="pref_header_about">About</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        .
    </string-array>

    <string name="error_invalid_number">ERROR: Invalid Number</string>
    <string name="about_title">About MAARK-5</string>
    <string name="about_descr">MAARK-5 is a group of students at the University of North Texas, College of Engineering, Computer Science Department. We came together as a group for our Software Development Capstone course. We decided as a team that our group would be well suited to create Meet Me Halfway. A fun fact about our group is that our name MAARK-5 comes from the first initials of all our names, and the fact that there are five teammates. We hope you enjoy our application. Team Members: Miranda Bigby, Abdullah Mumtaz, Amy Raney, Robin Rajan, Kaytlin Lafleur.</string>
</resources>
