<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_home"
        android:icon="?attr/homeAsUpIndicator"
        android:title="@string/title_button_back"
        app:showAsAction="ifRoom" />

    <!-- Settings, should always be in the overflow -->

    <item
        android:id="@+id/action_settings"
        android:title="@string/pref_header_user_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/map_options"
        android:title="@string/pref_header_map_options"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:title="@string/pref_header_about"
        app:showAsAction="never" />

</menu>